# speediance-cli

./: .editorconfig  .env.example  .gitattributes  .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOAL.md  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SKILL.md  config.example.json  go.mod  go.sum  library.json  pyproject.toml
.claude/: CLAWHUB_STANDARDS.md  CLI_CONVENTIONS.md
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-clawhub.yml  release.yml
cmd/speediance-cli/: main.go
internal/api/: client.go  client_test.go  endpoints.go  types.go
internal/auth/: tokencache.go  tokencache_test.go
internal/cli/: client.go  commands_test.go  completion.go  config.go  exit.go  library.go  login.go  output.go  push.go  root.go  session.go  sync.go  today.go  version.go  workouts.go
internal/config/: config.go  config_test.go  skill_doc_test.go
internal/sheet/: match.go  sheet.go  sheet_test.go
internal/template/: library.go  pyfloat.go  template.go  template_test.go
internal/version/: version.go  version_test.go
internal/workout/: model.go  model_test.go
plans/: example-push.json
speediance/: __init__.py  cli.py  client.py  config.py  models.py  sheet.py  templates.py
testdata/golden/: example-push.payload.json  week-01-legs.payload.json
testdata/plans/: week-01-legs.json
tests/: sample_week.md  test_sheet.py  test_templates.py
